--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <img src="./Assets/react-logo-png.png" alt="react" height="100">
         </div>
         <div class="col-lg-3 col-sm-12">
-          <img src="./Assets/jquery-logo-png.png" alt="jquery" height="40">
+          <img src="./Assets/jquery-horizontal.svg" alt="jquery" height="40">
         </div>
         <div class="col-lg-3 col-sm-12">
           <img src="./Assets/redux-logo.png" alt="redux" height="100">
